[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "rayen"
version = "0.0.1"
authors = [
  { name="Jesus Tordesillas", email="jtordesillas@ethz.ch" },
]
description = "Imposition of Hard Convex Constraints on Neural Networks"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
  "cryptography",
  "click>=7, <9, != 8.0.0",
  "python-dateutil==2.8.*",
  "numpy~=1.21.4",
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/leggedrobotics/rayen"
"Bug Tracker" = "https://github.com/leggedrobotics/rayen/issues"